Minor change - Some Structure to HTML file

--- a/Textstyle/index.html
+++ b/Textstyle/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
+<html>
+
 <head>
+    <title>Textstyle Practice</title>
    <link rel="stylesheet" href="textstyle.css">
 </head>
+
 <body>
     <p class="video_title">Talking Tech and AI with Google CEO Sundar Pichai!
 
@@ -20,4 +25,7 @@
 <p class="apple_text">Shop early for the best selection of 
     holiday favourites. <span class="shop_now">Shop Now &#62;</span>
 </p>
+
 </body>
+
+</html>
