--- a/Recreate Youtube/youtube.html
+++ b/Recreate Youtube/youtube.html
@@ -3,13 +3,38 @@
     <head>
         <title>Youtube.com Clone</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="youtube.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+
+
+        <link rel="stylesheet" href="Styles/video.css">
+        <link rel="stylesheet" href="Styles/header.css">
+        <link rel="stylesheet" href="Styles/general.css">
+
     </head>
     <body>
-        <input class="search_bar" type="text" placeholder="Search">
+
+      <header class="header">
+        <div class="left_section">
+          <img class="hamburger_menu" src="Header_images/hamburger-menu.svg" width="100%" alt="">
+          <img class= "youtube_logo" src="Header_images/youtube-logo.svg" width="100%" alt="">
+
+        </div>
+        <div class="middle_section">
+          <input class="search_bar" type="text" placeholder="Search">
+          <button class="search_button"><img class="search_icon" src="Header_images/search.svg" alt=""></button>
+          <button class="voice_search"><img class="voice_icon" src="Header_images/voice-search-icon.svg" alt=""></button>
+  
+
+        </div>
+        <div class="right_section">
+          right section
+
+        </div>
        
+
+      </header>
+      
         <div class="video_grid">
           <div class="video_preview">
 
