Finished Header Styling

--- a/Recreate Youtube/youtube.html
+++ b/Recreate Youtube/youtube.html
@@ -28,7 +28,11 @@
 
         </div>
         <div class="right_section">
-          right section
+          <img class= "camera_icon" src= "Header_images/camera.svg" width="100%" alt="">
+          <img class="youtube_apps" src="Header_images/youtube-apps.svg" width="100%" alt="">
+          <img class="notification_icon" src="Header_images/notifications.svg" width= "100%" alt="">
+          <img class="user_image" src="Header_images/my profile pic.png" alt="">
+
 
         </div>
        
