--- a/Position CSS/position.html
+++ b/Position CSS/position.html
@@ -6,7 +6,8 @@
 
     </head>
     <body style="height: 3000px;
-    padding-top: 60px;">
+    padding-top: 60px;
+    padding-left: 80px;">
         <div style=
         "background-color:black;
         color:white;
@@ -29,6 +30,16 @@
        height: 200px;
        width: 200px;">
         div 2
+       </div>
+
+       <div style="background-color:green;
+       color:white;
+       position: fixed; 
+       top: 55px;
+       left: 0;
+       width: 72px;
+       bottom: 0;">
+        sidebar
        </div>
         
     </body>
