--- a/Recreate Youtube/youtube.html
+++ b/Recreate Youtube/youtube.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="Styles/video.css">
         <link rel="stylesheet" href="Styles/header.css">
         <link rel="stylesheet" href="Styles/general.css">
+        <link rel="stylesheet" href="Styles/sidebar.css">
 
     </head>
     <body>
@@ -34,6 +35,10 @@
           <img class="user_image" src="Header_images/my profile pic.png" alt="">
 
 
+        </div>
+
+        <div class="side_bar">
+          sidebar
         </div>
        
 
