--- a/Position CSS/position.html
+++ b/Position CSS/position.html
@@ -16,9 +16,11 @@
         left: 0;
         right: 0;
         height: 50px;
+        z-index: 100;
         ">
             header
         </div>
+
        <div style="background-color:lightblue;
        height: 200px;
        width: 200px;
@@ -26,6 +28,7 @@
        ">
         div 1
        </div>
+
        <div style="background-color: lightpink;
        height: 200px;
        width: 200px;">
@@ -40,6 +43,34 @@
        width: 72px;
        bottom: 0;">
         sidebar
+
+        <div style="position: absolute;
+       background-color:red;
+       color:white;
+       top: 0;
+       right: 0;
+       ">
+        X
+       </div>
+       </div>
+
+       <div style="background-color:lightblue;
+       height: 200px;
+       width: 200px;
+       position:relative
+       ">
+        div 1
+
+        <div style="position: absolute;
+        background-color:red;
+        color:white;
+        bottom: 10px;
+        right: 10px;
+        ">
+         5:00
+        </div>
+
+
        </div>
         
     </body>
