CSS Position applied

--- a/Recreate Youtube/youtube.html
+++ b/Recreate Youtube/youtube.html
@@ -29,9 +29,13 @@
 
         </div>
         <div class="right_section">
-          <img class= "camera_icon" src= "Header_images/camera.svg" width="100%" alt="">
-          <img class="youtube_apps" src="Header_images/youtube-apps.svg" width="100%" alt="">
-          <img class="notification_icon" src="Header_images/notifications.svg" width= "100%" alt="">
+          <img class= "camera_icon" src= "Header_images/camera.svg"  alt="">
+          <img class="youtube_apps" src="Header_images/youtube-apps.svg"  alt="">
+          <div class="notification_box">
+            <img class="notification_icon" src="Header_images/notifications.svg" alt="">
+          <div class="notification_count">3</div>
+          </div>
+          
           <img class="user_image" src="Header_images/my profile pic.png" alt="">
 
 
@@ -49,6 +53,10 @@
 
             <div class="thumbnail_row">
                 <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+                <div class="video_time">
+                  14:20
+
+                </div>
 
             </div>
             <div class="video_info_grid">
@@ -76,6 +84,10 @@
 
           <div class="thumbnail_row">
               <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="">
+              <div class="video_time">
+                8:22
+
+              </div>
 
           </div>
           <div class="video_info_grid">
@@ -103,7 +115,10 @@
 
         <div class="thumbnail_row">
             <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="">
+            <div class="video_time">
+              9:13
 
+            </div>
         </div>
         <div class="video_info_grid">
             <div class="channel_picture">
@@ -130,7 +145,10 @@
 
       <div class="thumbnail_row">
           <img class="thumbnail" src="thumbnails/thumbnail-4.webp" alt="">
+          <div class="video_time">
+            22:09
 
+          </div>
       </div>
       <div class="video_info_grid">
           <div class="channel_picture">
@@ -158,7 +176,10 @@
 
     <div class="thumbnail_row">
         <img class="thumbnail" src="thumbnails/thumbnail-5.webp" alt="">
+        <div class="video_time">
+          11:17
 
+        </div>
     </div>
     <div class="video_info_grid">
         <div class="channel_picture">
@@ -185,7 +206,10 @@
 
   <div class="thumbnail_row">
       <img class="thumbnail" src="thumbnails/thumbnail-6.webp" alt="">
+      <div class="video_time">
+        7:12
 
+      </div>
   </div>
   <div class="video_info_grid">
       <div class="channel_picture">
