Tooltips Header Create style

--- a/Recreate Youtube/youtube.html
+++ b/Recreate Youtube/youtube.html
@@ -23,17 +23,24 @@
         </div>
         <div class="middle_section">
           <input class="search_bar" type="text" placeholder="Search">
-          <button class="search_button"><img class="search_icon" src="Header_images/search.svg" alt=""></button>
-          <button class="voice_search"><img class="voice_icon" src="Header_images/voice-search-icon.svg" alt=""></button>
+          <button class="search_button"><img class="search_icon" src="Header_images/search.svg" alt="">
+          <div>Search</div></button>
+          <button class="voice_search"><img class="voice_icon" src="Header_images/voice-search-icon.svg" alt="">
+          <div>Voice Search</div></button>
   
 
         </div>
         <div class="right_section">
-          <img class= "camera_icon" src= "Header_images/camera.svg"  alt="">
-          <img class="youtube_apps" src="Header_images/youtube-apps.svg"  alt="">
+          <div class="camera_container"> <img class= "camera_icon" src= "Header_images/camera.svg"  alt="">
+          <div>Create</div>
+          </div>
+          <div class="apps_container"><img class="youtube_apps" src="Header_images/youtube-apps.svg"  alt="">
+          <div>Youtube Apps</div></div>
+          
           <div class="notification_box">
             <img class="notification_icon" src="Header_images/notifications.svg" alt="">
           <div class="notification_count">3</div>
+          <div class="notification_sticker">Notifications</div>
           </div>
           
           <img class="user_image" src="Header_images/my profile pic.png" alt="">
