--- a/Recreate Youtube/youtube.html
+++ b/Recreate Youtube/youtube.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Youtube.com Clone</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
